--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 * {
   margin: 0%;
   padding: 0%;
-  font-family: "Lumanosimo", cursive;
+  font-family: 'Noto Serif JP', serif;
 }
 html {
   scroll-behavior: smooth;
@@ -124,7 +124,7 @@ html {
   margin-left: 10px;
 }
 .skills {
-  margin: 5px 40px;
+  margin: 1px 50px;
 }
 .skills h1 {
   font-size: 35px;
